Added Google logo, Added Input Box

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <a href="https://www.google.com.ph/imghp?hl=en&tab=wi&authuser=0&ogbl">Images</a>
         <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com.ph/imghp%3Fhl%3Den%26tab%3Dwi%26authuser%3D0%26ogbl&ec=GAVAAg"><button><b>Sign in</b></button></a>
     </nav>
+    <div id="centered" class="centered-img">
+        <img src="images/Googlelogo.png" alt="">
+    </div>
+    <div id="centered" >
+        <div class="input_container">
+            <input type="search" name="Searchbox" id="">
+        </div>
+    </div>
+    
+    
+
 </body>
 </html>
