--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com.ph/imghp%3Fhl%3Den%26tab%3Dwi%26authuser%3D0%26ogbl&ec=GAVAAg"><button><b>Sign in</b></button></a>
     </nav>
     <div class="content-container">
-        <div id="centered" class="centered-img">
+        <div class="centered centered-img">
             <img src="images/Googlelogo.png" alt="">
         </div>
-        <div id="centered" >
+        <div class="centered" >
             <div class="input_container">
                 <input type="search" name="Searchbox" id="">
             </div>
