Added Two Button, Google Search and I'm Feeling Lucky

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 <input type="search" name="Searchbox" id="">
             </div>
         </div>
+        <div class="centered">
+            <button>
+                <h4>Google Search</h4>
+            </button>
+            <button>
+                <h4>I'm Feeling Lucky</h4>
+            </button>
+        </div>
     </div>
     <footer>
         <div class="rcl">
