--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Gmail</a>
-        <a href="https://www.google.com.ph/imghp?hl=en&tab=wi&authuser=0&ogbl">Images</a>
-        <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com.ph/imghp%3Fhl%3Den%26tab%3Dwi%26authuser%3D0%26ogbl&ec=GAVAAg"><button><b>Sign in</b></button></a>
+        <a href="#">Gmail</a>
+        <a href="#">Images</a>
+        <a href="#"><button><b>Sign in</b></button></a>
     </nav>
     <div class="content-container">
         <div class="centered centered-img">
