--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <div class="logo">
                 <h1>
                     Ysl
-                    <h1 class="logo--ext">Ron</h1>
+                    <span class="logo--ext">Ron</span>
                 </h1>
             </div>
             <div class="links" id="anim">
                 <ul class="main-nav">
                     <li><a class="nav-links" href="#">Home</a></li>
+                    <li><a class="nav-links" href="#">Projects</a></li>
                     <li><a class="nav-links" href="#">About</a></li>
-                    <li><a class="nav-links" href="#">Portfolio</a></li>
                     <li><a class="nav-links" href="#">Blog</a></li>
                 </ul>
             </div>
@@ -50,16 +50,48 @@
                     </div>
                     <div class="social-icons">
                         <!--<h4>Find Me on</h4>-->
-                        <a href="https://www.facebook.com/Ysl.Ron.hepos1/"><img src="./images/f.png" alt=""></a>
-                        <a href="https://twitter.com/yslron1"><img src="./images/twit.png" alt=""></a>
-                        <a href="https://www.instagram.com/yslron/"><img src="./images/inst.png" alt=""></a>
-                        <a href="https://github.com/yslron"><img src="./images/git.png" alt=""></a>
+                        <a href="https://www.facebook.com/Ysl.Ron.hepos1/" target="_blank"><img src="./images/f.png"
+                                alt="facebook"></a>
+                        <a href="https://twitter.com/yslron1" target="_blank"><img src="./images/twit.png"
+                                alt="twitter"></a>
+                        <a href="https://www.instagram.com/yslron/" target="_blank"><img src="./images/inst.png"
+                                alt="instagram"></a>
+                        <a href="https://github.com/yslron" target="_blank"><img src="./images/git.png"
+                                alt="github"></a>
                     </div>
                 </div>
             </section>
         </div>
-        <img class="pfp" src="./images/web.png" alt="Face">
-        <div class="extention"></div>
+    </section>
+    <img class="pfp" src="./images/web.png" alt="Face">
+    <div class="extention">
+        <h1>Projects</h1>
+    </div>
+
+    <section class="projects ">
+        <div class="proj-container">
+            <div class="border-wrap">
+                <div class="proj-content">
+                    <h2 class="f-l">Project1</h2>
+                </div>
+            </div>
+            <div class="border-wrap">
+                <div class="proj-content">
+                    <h2 class="f-l">Project2</h2>
+                </div>
+            </div>
+            <div class="border-wrap">
+                <div class="proj-content">
+                    <h2 class="f-l">Project3</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <h3 class="f-l">©2020 Ysl Ron</h3>
+        </div>
+    </footer>
 </body>
 
 </html>
